# taskflow-app

./: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
.github/workflows/: build.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: ConfirmDialog.tsx  MetricChips.tsx  TaskCard.tsx  Topbar.tsx
src/data/: changelog.ts
src/lib/: db.ts  format.ts  i18n.ts  quotes.ts  utils.ts
src/pages/: Dashboard.tsx  Help.tsx  Settings.tsx  Stats.tsx  Tasks.tsx
src/store/: useStore.ts
src/styles/: globals.css
